<resources>
    <string name="app_name">AIS-Devices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_creator">Dodaj nowe urządzenie</string>
    <string name="creator_welcome_text">Włącz do prądu swoje nowe urządzenie AIS. W kolejnych krokach podłączymy je do
        twojej lokalnej sieci WiFi
        i AIS Devices.
    </string>
    <string-array name="ais_device_masks">
        <item>dom_</item>
        <item>sonoff_</item>
        <item>itead_</item>
    </string-array>

    <string name="text_name_fragment">Podaj przyjazną nazwę dla wybranego urządzenia (%1$s)</string>
    <string name="new_device">Nowe urządzenie</string>
    <string name="connect">Połącz</string>
    <string name="back">Cofnij</string>
    <string name="finish">Zakończ</string>
    <string name="unknown_error">Niestety coś poszło nie tak</string>
    <string name="welcome_add_new_device">Dodaj swoje pierwsze urządzenie</string>
    <string name="next">Dalej</string>
    <string name="name">Nazwa</string>
    <string name="password">Hasło</string>
    <string name="ap_data_info">Podaj dane swojej sieci WiFi do której chcesz podłączyć urządzenie AIS</string>
    <string name="connecting_info">Wybierz \"Połącz\" by rozpocząć proces połączenia urządzenia do twojej lokalnej sieci
        WiFi. Podczas tego procesu konieczne jest rozłączenie tego urządzenia z sieci WiFi, zajmie to tylko chwilę.
    </string>
    <string name="save_password">Zapisz hasło</string>
</resources>
